--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@antv/l7": "^2.4.1",
     "@antv/l7-district": "^2.3.4",
     "@antv/l7-maps": "^2.4.1",
+    "@jiaminghi/charts": "^0.2.18",
+    "@jiaminghi/data-view": "^2.10.0",
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "d3": "^4.0.0",
     "d3-dsv": "^3.0.1",
     "echarts": "^5.1.2",
     "jquery": "^3.6.0",
